--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.security.oauth2.client.registration.google.scope=openid,profile,email
 
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
-server.servlet.session.cookie.domain=localhost
+server.servlet.session.cookie.domain=fhallengreenoauth2.azurewebsites.net
